WIP: fix split panel header overflow

--- a/src/app-layout/visual-refresh/split-panel.scss
+++ b/src/app-layout/visual-refresh/split-panel.scss
@@ -24,7 +24,6 @@ section.split-panel-bottom {
   grid-column: 1 / 6;
   grid-row: 9;
   block-size: auto;
-  overflow-y: hidden;
 
   /*
   The position sticky will work in conjunction with the align self: end; property.
